--- a/signup1.html
+++ b/signup1.html
@@ -16,8 +16,8 @@
     <input type="text" id="name" placeholder="이름을 입력해주세요"> <br>
     <input type="text" id="password" placeholder="비밀번호를 입력해주세요"> <br>
     <input type="text" id="repassword" placeholder="비밀번호를 다시 입력해주세요"> <br>
-    <input type="number" id="cellphone1">
-    -<input type="number" id="cellphone2">-<input type="number" id="cellphone3"> <br>
+    <input type="text" id="cellphone1">
+    -<input type="text" id="cellphone2">-<input type="text" id="cellphone3"> <br>
     000000 <br>
     <button>인증번호 전송</button> <br>
     3:00 <br>
