--- a/JS/CountDown/countdown-timer.html
+++ b/JS/CountDown/countdown-timer.html
@@ -68,7 +68,7 @@
 
     <div class="footer">
       © 2023. <a href="https://ozcodingschool.com/" target="_blank">ozcodingschool</a>. All rights
-      reserved. Developed by <a href="#">[김효중 a.k.a backdfb]</a>.
+      reserved. Developed by <a href="https://github.com/backdfb">[김효중 a.k.a backdfb]</a>.
     </div>
   </body>
 </html>
